# vulkan-compute-shader-setup

./: .gitmodules  CMakeLists.txt  Makefile  README.md
shaders/: shader.comp
src/: main.cpp  structs.h  vulkan.cpp  vulkan.h
src/shaders/: shader.comp
